--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npx patch-package"
   },
   "dependencies": {
+    "@dongminyu/react-native-step-counter": "^0.2.5",
     "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.0",
     "@react-native-community/blur": "^4.4.1",
