--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dongminyu/react-native-step-counter": "^0.2.5",
     "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.0",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
