--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@google/generative-ai": "^0.24.0",
     "@notifee/react-native": "^9.1.8",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/messaging": "^21.13.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "axios": "^1.8.3",
